Fix overlapping issue introduced by paged.js v0.30 or 0.31

--- a/default/partials/_page-setup.scss
+++ b/default/partials/_page-setup.scss
@@ -39,6 +39,9 @@
         .pagedjs_left_page {
             float: left;
         }
+        .pagedjs_right_page {
+            margin-left: $page-width;
+        }
         .pagedjs_first_page {
             margin-left: $page-width;
         }
